--- a/build.gradle
+++ b/build.gradle
@@ -31,16 +31,31 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-actuator")
+    //compile("org.springframework.boot:spring-boot-starter-web")
+   
+   // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
+implementation("org.springframework.boot:spring-boot-starter-web:2.7.0")
+   
+   // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
+//implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.7.0'
+
     compile group: 'org.javamoney', name: 'moneta', version: '1.3'
 	compile group: 'com.jsoniter', name: 'jsoniter', version: '0.9.23'
 	
     compile(name:'gpsUtil', ext:'jar')
     compile(name:'RewardCentral', ext:'jar')
     compile(name:'TripPricer', ext:'jar')
-    
-    testCompile("junit:junit")
+
+
+
+// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
+implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.1.3.RELEASE'
+implementation 'org.springframework.cloud:spring-cloud-dependencies:2020.0.3'
+
+
+
+
+testCompile("junit:junit")
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.6.RELEASE'
 }
 
